--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		@font-face
 		{
 			font-family: "JetBrains Mono";
-			src: url('fonts/webfonts/JetBrainsMono-Regular.woff2') format('woff2');
+			src: url('JetBrainsMono-Regular.woff2') format('woff2');
 		}
 		body
 		{
