removed redundant mentions to artificial intelligence

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 								<p>Achievements</p>
 								<ul>
 									<li>Design and implementation of an internal C++ library for artificial intelligence knowlege data insertion</li>
-									<li>Design and implementation of various service applications for reading and processing emails and filesystem documents through artificial intelligence services</li>
+									<li>Design and implementation of various service applications for reading and processing emails and filesystem documents</li>
 									<li>Design and implementation of a service application for the retrieval of documents through an API to be processed for an artificial intelligence service</li>
-									<li>Design and implementation of a middleware service application for retrieval and balanced dispatch of documents to artificial intelligence extraction services</li>
+									<li>Design and implementation of a middleware service application for retrieval and balanced dispatch of documents</li>
 									<li>Design and implementation of an artificial intelligence service for extracting data from notary invoices</li>
 									<li>Design and implementation of an artificial intelligence service for extracting data from land registry deeds</li>
 									<li>Implementation of memory management changes in the artificial intelligence core technology for huge performance gains and service stability</li>
